@@ -192,6 +192,8 @@ MAIN GOAL for 0.6.0:
         [ ]  Read-only state variables, or special handlers! Even better.
 	     I.e. warn about (or refuse) to write to unimplemented bits
 	     of control registers.
+	[ ]  Custom ToString variants? Useful for bit fields, control
+	     registers, etc. "Verbose tostring"?
 	[ ]  Loaded files should be part of state/model! But not part
 	     of the component tree. I.e. state = components +
 	     other configuration!
